Currency, Cryptocurrency: Fix dropdown text overlapping (#3316)
* Prevent select text from overlapping dropdown icon

* Remove unneeded frm--bottom class

* Prevent select text from overlapping dropdown icon

* Remove unneeded frm--bottom, frm--top classes

* remove trailing spaces

* remove line-height, fix css class rule

--- a/share/spice/cryptocurrency/cryptocurrency.css
+++ b/share/spice/cryptocurrency/cryptocurrency.css
@@ -20,15 +20,21 @@
     box-shadow: none;
 }
 
-.zci--cryptocurrency .frm--top .frm__select {
-    width: 100%;
+.zci--currency .frm__select:after {
+    height: 100%;
+    width: 30px;
+    margin-top: 0;
+    padding-top: 1.4em;
+    top: 0;
+    right: 0;
+    background-color: #fafafa;
+}
+.zci--currency .frm__select:hover:after {
+    background-color: #fff;
 }
 
-.zci--cryptocurrency .frm--top {
-    margin-bottom: 1em;
-}
 
-.zci--cryptocurrency .frm--bottom > div {
+.zci--cryptocurrency .frm > div {
     float: left;
 }
 
@@ -36,9 +42,8 @@
     width: 45%;
 }
 
-
-.zci--cryptocurrency .frm--bottom .frm__input,
-.zci--cryptocurrency .frm--bottom .frm__select {
+.zci--cryptocurrency .frm__input,
+.zci--cryptocurrency .frm__select {
     display: block;
     width: 100%;
     height: 3em;
@@ -49,7 +54,7 @@
     border-color: #c9c9c9;
 }
 
-.zci--cryptocurrency .frm--bottom .frm__input {
+.zci--cryptocurrency .frm__input {
     border-bottom: none;
     border-right: 1px solid #c9c9c9;
     border-bottom-left-radius: 0;
@@ -59,7 +64,7 @@
     height: 1.8em !important;
 }
 
-.zci--cryptocurrency .frm--bottom .frm__select {
+.zci--cryptocurrency .frm__select {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     border-bottom-left-radius: 2px;
@@ -67,9 +72,21 @@
     border-left-color: #c9c9c9;
 }
 
-.zci--cryptocurrency .frm--bottom .frm__select select {
+.zci--cryptocurrency .frm__select:after {
+    height: 100%;
+    width: 30px;
+    margin-top: 0;
+    padding-top: 1.4em;
+    top: 0;
+    right: 0;
+    background-color: #fafafa;
+}
+.zci--cryptocurrency .frm__select:hover:after {
+    background-color: #fff;
+}
+
+.zci--cryptocurrency .frm__select select {
     height: 3em !important;
-    padding-right: 1.5em;
 }
 
 .zci--cryptocurrency .equals-sign {
